@@ -129,7 +129,6 @@ import com.google.common.collect.ImmutableMap;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -176,6 +175,7 @@ public class DefaultConnectorServiceImpl implements ConnectorService {
   OutboxService outboxService;
   YamlGitConfigClient yamlGitConfigClient;
   EntitySetupUsageService entitySetupUsageService;
+  private static final String CONNECTOR = "connector";
 
   @Override
   public Optional<ConnectorResponseDTO> get(
@@ -188,8 +188,8 @@ public class DefaultConnectorServiceImpl implements ConnectorService {
   @Override
   public Optional<ConnectorResponseDTO> getByRef(
       String accountIdentifier, String orgIdentifier, String projectIdentifier, String connectorRef) {
-    IdentifierRef identifierRef =
-        IdentifierRefHelper.getIdentifierRef(connectorRef, accountIdentifier, orgIdentifier, projectIdentifier);
+    IdentifierRef identifierRef = IdentifierRefHelper.getIdentifierRefOrThrowException(
+        connectorRef, accountIdentifier, orgIdentifier, projectIdentifier, CONNECTOR);
     return get(identifierRef.getAccountIdentifier(), identifierRef.getOrgIdentifier(),
         identifierRef.getProjectIdentifier(), identifierRef.getIdentifier());
   }
@@ -221,32 +221,34 @@ public class DefaultConnectorServiceImpl implements ConnectorService {
   }
 
   @Override
-  public Page<ConnectorResponseDTO> list(int page, int size, String accountIdentifier,
-      ConnectorFilterPropertiesDTO filterProperties, String orgIdentifier, String projectIdentifier,
-      String filterIdentifier, String searchTerm, Boolean includeAllConnectorsAccessibleAtScope,
-      Boolean getDistinctFromBranches) {
-    Page<Connector> connectors =
-        listHelper(page, size, accountIdentifier, filterProperties, orgIdentifier, projectIdentifier, filterIdentifier,
-            searchTerm, includeAllConnectorsAccessibleAtScope, getDistinctFromBranches);
+  public Page<ConnectorResponseDTO> list(String accountIdentifier, ConnectorFilterPropertiesDTO filterProperties,
+      String orgIdentifier, String projectIdentifier, String filterIdentifier, String searchTerm,
+      Boolean includeAllConnectorsAccessibleAtScope, Boolean getDistinctFromBranches, Pageable pageable) {
+    Page<Connector> connectors = listHelper(accountIdentifier, filterProperties, orgIdentifier, projectIdentifier,
+        filterIdentifier, searchTerm, includeAllConnectorsAccessibleAtScope, getDistinctFromBranches, pageable, null);
     return getResponseList(accountIdentifier, orgIdentifier, projectIdentifier, connectors);
   }
 
-  private Page<Connector> listHelper(int page, int size, String accountIdentifier,
-      ConnectorFilterPropertiesDTO filterProperties, String orgIdentifier, String projectIdentifier,
-      String filterIdentifier, String searchTerm, Boolean includeAllConnectorsAccessibleAtScope,
-      Boolean getDistinctFromBranches) {
+  @Override
+  public Page<ConnectorResponseDTO> list(String accountIdentifier, ConnectorFilterPropertiesDTO filterProperties,
+      String orgIdentifier, String projectIdentifier, String filterIdentifier, String searchTerm,
+      Boolean includeAllConnectorsAccessibleAtScope, Boolean getDistinctFromBranches, Pageable pageable,
+      String version) {
+    Page<Connector> connectors =
+        listHelper(accountIdentifier, filterProperties, orgIdentifier, projectIdentifier, filterIdentifier, searchTerm,
+            includeAllConnectorsAccessibleAtScope, getDistinctFromBranches, pageable, version);
+    return getResponseList(accountIdentifier, orgIdentifier, projectIdentifier, connectors);
+  }
+
+  private Page<Connector> listHelper(String accountIdentifier, ConnectorFilterPropertiesDTO filterProperties,
+      String orgIdentifier, String projectIdentifier, String filterIdentifier, String searchTerm,
+      Boolean includeAllConnectorsAccessibleAtScope, Boolean getDistinctFromBranches, Pageable pageable,
+      String version) {
     Boolean isBuiltInSMDisabled = isBuiltInSMDisabled(accountIdentifier);
 
-    Criteria criteria =
-        filterService.createCriteriaFromConnectorListQueryParams(accountIdentifier, orgIdentifier, projectIdentifier,
-            filterIdentifier, searchTerm, filterProperties, includeAllConnectorsAccessibleAtScope, isBuiltInSMDisabled);
-    Pageable pageable = getPageRequest(
-        PageRequest.builder()
-            .pageIndex(page)
-            .pageSize(size)
-            .sortOrders(Collections.singletonList(
-                SortOrder.Builder.aSortOrder().withField(ConnectorKeys.createdAt, OrderType.DESC).build()))
-            .build());
+    Criteria criteria = filterService.createCriteriaFromConnectorListQueryParams(accountIdentifier, orgIdentifier,
+        projectIdentifier, filterIdentifier, searchTerm, filterProperties, includeAllConnectorsAccessibleAtScope,
+        isBuiltInSMDisabled, version);
     Page<Connector> connectors;
     if (Boolean.TRUE.equals(getDistinctFromBranches)
         && gitSyncSdkService.isGitSyncEnabled(accountIdentifier, orgIdentifier, projectIdentifier)) {
@@ -358,11 +360,11 @@ public class DefaultConnectorServiceImpl implements ConnectorService {
 
   public Page<ConnectorResponseDTO> list(int page, int size, String accountIdentifier, String orgIdentifier,
       String projectIdentifier, String searchTerm, ConnectorType type, ConnectorCategory category,
-      ConnectorCategory sourceCategory) {
+      ConnectorCategory sourceCategory, String version) {
     Boolean isBuiltInSMDisabled = isBuiltInSMDisabled(accountIdentifier);
 
     Criteria criteria = filterService.createCriteriaFromConnectorFilter(accountIdentifier, orgIdentifier,
-        projectIdentifier, searchTerm, type, category, sourceCategory, isBuiltInSMDisabled);
+        projectIdentifier, searchTerm, type, category, sourceCategory, isBuiltInSMDisabled, version);
     Pageable pageable = getPageRequest(
         PageRequest.builder()
             .pageIndex(page)
@@ -792,7 +794,7 @@ public class DefaultConnectorServiceImpl implements ConnectorService {
   @Override
   public long count(String accountIdentifier, String orgIdentifier, String projectIdentifier) {
     Criteria criteria = filterService.createCriteriaFromConnectorFilter(
-        accountIdentifier, orgIdentifier, projectIdentifier, null, null, null, null, false);
+        accountIdentifier, orgIdentifier, projectIdentifier, null, null, null, null, false, null);
     return connectorRepository.count(criteria);
   }
 
@@ -1179,14 +1181,13 @@ public class DefaultConnectorServiceImpl implements ConnectorService {
   }
 
   @Override
-  public Page<CombineCcmK8sConnectorResponseDTO> listCcmK8S(int page, int size, String accountIdentifier,
+  public Page<CombineCcmK8sConnectorResponseDTO> listCcmK8S(String accountIdentifier,
       ConnectorFilterPropertiesDTO filterProperties, String orgIdentifier, String projectIdentifier,
       String filterIdentifier, String searchTerm, Boolean includeAllConnectorsAccessibleAtScope,
-      Boolean getDistinctFromBranches) {
-    filterProperties.setTypes(Arrays.asList(new ConnectorType[] {ConnectorType.KUBERNETES_CLUSTER}));
-    Page<Connector> k8sConnectors =
-        listHelper(page, size, accountIdentifier, filterProperties, orgIdentifier, projectIdentifier, filterIdentifier,
-            searchTerm, includeAllConnectorsAccessibleAtScope, getDistinctFromBranches);
+      Boolean getDistinctFromBranches, Pageable pageable) {
+    filterProperties.setTypes(List.of(ConnectorType.KUBERNETES_CLUSTER));
+    Page<Connector> k8sConnectors = listHelper(accountIdentifier, filterProperties, orgIdentifier, projectIdentifier,
+        filterIdentifier, searchTerm, includeAllConnectorsAccessibleAtScope, getDistinctFromBranches, pageable, null);
 
     List<String> k8sConnectorRefList = new ArrayList<>();
     for (Connector k8sConnector : k8sConnectors) {
@@ -1194,14 +1195,15 @@ public class DefaultConnectorServiceImpl implements ConnectorService {
     }
     log.info("k8sConnectorRefList {}", k8sConnectorRefList);
 
-    filterProperties.setTypes(Arrays.asList(new ConnectorType[] {ConnectorType.CE_KUBERNETES_CLUSTER}));
+    Pageable ccmK8sPageable = getPageRequest(0, 100, null);
+    filterProperties.setTypes(List.of(ConnectorType.CE_KUBERNETES_CLUSTER));
     filterProperties.setCcmConnectorFilter(CcmConnectorFilter.builder().k8sConnectorRef(k8sConnectorRefList).build());
-    Page<Connector> ccmk8sConnectors =
-        listHelper(0, size, accountIdentifier, filterProperties, orgIdentifier, projectIdentifier, filterIdentifier,
-            searchTerm, includeAllConnectorsAccessibleAtScope, getDistinctFromBranches);
-    log.info("ccmk8sConnectors count elements: {} pages: {}", ccmk8sConnectors.getTotalElements(),
-        ccmk8sConnectors.getTotalPages());
-    return getCcmK8sResponseList(accountIdentifier, orgIdentifier, projectIdentifier, k8sConnectors, ccmk8sConnectors);
+    Page<Connector> ccmK8sConnectors =
+        listHelper(accountIdentifier, filterProperties, orgIdentifier, projectIdentifier, filterIdentifier, searchTerm,
+            includeAllConnectorsAccessibleAtScope, getDistinctFromBranches, ccmK8sPageable, null);
+    log.info("ccmK8sConnectors count elements: {} pages: {}", ccmK8sConnectors.getTotalElements(),
+        ccmK8sConnectors.getTotalPages());
+    return getCcmK8sResponseList(accountIdentifier, orgIdentifier, projectIdentifier, k8sConnectors, ccmK8sConnectors);
   }
 
   private Boolean isBuiltInSMDisabled(String accountIdentifier) {
