@@ -7,33 +7,41 @@
 
 package io.harness.cvng.core.services.impl;
 
+import static io.harness.cvng.CVNGTestConstants.FIXED_TIME_FOR_TESTS;
 import static io.harness.rule.OwnerRule.ABHIJITH;
 import static io.harness.rule.OwnerRule.ARPITJ;
 import static io.harness.rule.OwnerRule.KAMAL;
+import static io.harness.rule.OwnerRule.KARAN_SARASWAT;
 import static io.harness.rule.OwnerRule.VARSHA_LALWANI;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.AssertionsForClassTypes.offset;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import io.harness.CvNextGenTestBase;
 import io.harness.category.element.UnitTests;
 import io.harness.cvng.BuilderFactory;
 import io.harness.cvng.activity.entities.Activity;
+import io.harness.cvng.activity.services.api.ActivityService;
 import io.harness.cvng.beans.activity.ActivityType;
 import io.harness.cvng.beans.change.ChangeCategory;
 import io.harness.cvng.beans.change.ChangeEventDTO;
 import io.harness.cvng.beans.change.ChangeSourceType;
+import io.harness.cvng.beans.change.ChangeSummaryDTO;
 import io.harness.cvng.beans.change.DeepLink;
 import io.harness.cvng.beans.change.InternalChangeEvent;
 import io.harness.cvng.beans.change.InternalChangeEventMetaData;
-import io.harness.cvng.core.beans.change.ChangeSummaryDTO;
 import io.harness.cvng.core.beans.change.ChangeTimeline;
 import io.harness.cvng.core.beans.change.ChangeTimeline.TimeRangeDetail;
 import io.harness.cvng.core.beans.monitoredService.DurationDTO;
+import io.harness.cvng.core.services.api.FeatureFlagService;
 import io.harness.cvng.core.services.api.monitoredService.ChangeSourceService;
 import io.harness.cvng.core.services.api.monitoredService.MonitoredServiceService;
 import io.harness.cvng.core.services.impl.ChangeEventServiceImpl.TimelineObject;
+import io.harness.cvng.core.utils.FeatureFlagNames;
 import io.harness.cvng.utils.ScopedInformation;
 import io.harness.ng.beans.PageRequest;
 import io.harness.ng.beans.PageResponse;
@@ -42,6 +50,7 @@ import io.harness.rule.Owner;
 
 import com.google.inject.Inject;
 import dev.morphia.query.Query;
+import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -49,35 +58,46 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashSet;
 import java.util.List;
+import org.apache.commons.lang3.reflect.FieldUtils;
 import org.assertj.core.api.Assertions;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
+import org.mockito.MockitoAnnotations;
 
 public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Inject MonitoredServiceService monitoredServiceService;
+  @Inject ActivityService activityService;
   @Inject ChangeEventServiceImpl changeEventService;
   @Inject ChangeSourceService changeSourceService;
   @Inject HPersistence hPersistence;
+  Clock clock;
 
   BuilderFactory builderFactory;
+  FeatureFlagService featureFlagService;
 
-  List<String> changeSourceIdentifiers = Arrays.asList("changeSourceID");
+  List<String> changeSourceIdentifiers = List.of("changeSourceID");
 
   @Before
-  public void before() {
+  public void before() throws IllegalAccessException {
     builderFactory = BuilderFactory.getDefault();
+    clock = FIXED_TIME_FOR_TESTS;
     monitoredServiceService.createDefault(builderFactory.getProjectParams(),
         builderFactory.getContext().getServiceIdentifier(), builderFactory.getContext().getEnvIdentifier());
+    MockitoAnnotations.initMocks(this);
+    featureFlagService = mock(FeatureFlagService.class);
+    when(featureFlagService.isFeatureFlagEnabled(
+             eq(builderFactory.getContext().getAccountId()), eq(FeatureFlagNames.SRM_INTERNAL_CHANGE_SOURCE_CE)))
+        .thenReturn(true);
+    FieldUtils.writeField(changeEventService, "featureFlagService", featureFlagService, true);
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testRegister_insert() {
-    changeSourceService.create(builderFactory.getContext().getMonitoredServiceParams(),
-        new HashSet<>(Arrays.asList(builderFactory.getHarnessCDChangeSourceDTOBuilder().build())));
     ChangeEventDTO changeEventDTO = builderFactory.harnessCDChangeEventDTOBuilder().build();
 
     changeEventService.register(changeEventDTO);
@@ -99,11 +119,63 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   }
 
   @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testRegister_insertCustomChangeEvent_withoutEventId() {
+    changeSourceService.create(builderFactory.getContext().getMonitoredServiceParams(),
+        new HashSet<>(
+            Arrays.asList(builderFactory.getCustomChangeSourceDTOBuilder(ChangeSourceType.CUSTOM_DEPLOY).build())));
+    ChangeEventDTO changeEventDTO = builderFactory.getCustomChangeEventBuilder(ChangeSourceType.CUSTOM_DEPLOY).build();
+
+    changeEventService.register(changeEventDTO);
+    changeEventService.register(changeEventDTO);
+
+    Activity activityFromDb = hPersistence.createQuery(Activity.class).get();
+    Assertions.assertThat(activityFromDb).isNotNull();
+    long count = hPersistence.createQuery(Activity.class).count();
+    assertThat(count).isEqualTo(2);
+  }
+
+  @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testRegister_insertCustomChangeEvent_withDuplicateEventId() {
+    changeSourceService.create(builderFactory.getContext().getMonitoredServiceParams(),
+        new HashSet<>(
+            Arrays.asList(builderFactory.getCustomChangeSourceDTOBuilder(ChangeSourceType.CUSTOM_DEPLOY).build())));
+    ChangeEventDTO changeEventDTO =
+        builderFactory.getCustomChangeEventBuilder(ChangeSourceType.CUSTOM_DEPLOY).id("identifier").build();
+
+    changeEventService.register(changeEventDTO);
+    changeEventService.register(changeEventDTO);
+
+    long count = hPersistence.createQuery(Activity.class).count();
+    assertThat(count).isEqualTo(1);
+  }
+
+  @Test
+  @Owner(developers = ARPITJ)
+  @Category(UnitTests.class)
+  public void testRegister_insertCustomChangeEvent_withUniqueEventId() {
+    changeSourceService.create(builderFactory.getContext().getMonitoredServiceParams(),
+        new HashSet<>(
+            Arrays.asList(builderFactory.getCustomChangeSourceDTOBuilder(ChangeSourceType.CUSTOM_DEPLOY).build())));
+    ChangeEventDTO changeEventDTO =
+        builderFactory.getCustomChangeEventBuilder(ChangeSourceType.CUSTOM_DEPLOY).id("identifier1").build();
+
+    changeEventService.register(changeEventDTO);
+    ChangeEventDTO changeEventDTO2 =
+        builderFactory.getCustomChangeEventBuilder(ChangeSourceType.CUSTOM_DEPLOY).id("identifier2").build();
+    changeEventService.register(changeEventDTO2);
+
+    long count = hPersistence.createQuery(Activity.class).count();
+    assertThat(count).isEqualTo(2);
+  }
+
+  @Test
   @Owner(developers = KAMAL)
   @Category(UnitTests.class)
   public void testRegister_insertWithNoMonitoredService() {
-    changeSourceService.create(builderFactory.getContext().getMonitoredServiceParams(),
-        new HashSet<>(Arrays.asList(builderFactory.getHarnessCDChangeSourceDTOBuilder().build())));
     ChangeEventDTO changeEventDTO =
         builderFactory.harnessCDChangeEventDTOBuilder().monitoredServiceIdentifier(null).build();
 
@@ -134,9 +206,6 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testRegister_update() {
-    changeSourceService.create(builderFactory.getContext().getMonitoredServiceParams(),
-        new HashSet<>(Arrays.asList(builderFactory.getHarnessCDChangeSourceDTOBuilder().build())));
-
     ChangeEventDTO changeEventDTO = builderFactory.harnessCDChangeEventDTOBuilder().build();
     changeEventService.register(changeEventDTO);
     Long eventTime = 123L;
@@ -195,8 +264,6 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testRegister_noChangeSource() {
-    changeSourceService.create(builderFactory.getContext().getMonitoredServiceParams(),
-        new HashSet<>(Arrays.asList(builderFactory.getHarnessCDChangeSourceDTOBuilder().build())));
     ChangeEventDTO changeEventDTO = builderFactory.harnessCDChangeEventDTOBuilder().build();
 
     changeEventService.register(changeEventDTO);
@@ -268,7 +335,7 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetPaginated_withTypeFiltering() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
@@ -280,8 +347,8 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
         builderFactory.getPagerDutyActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
-
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     PageResponse<ChangeEventDTO> firstPage =
         changeEventService.getChangeEvents(builderFactory.getContext().getProjectParams(),
             Arrays.asList(builderFactory.getContext().getServiceIdentifier()), null, null,
@@ -305,52 +372,61 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   public void testCreateTextSearchQuery() {
     // testing query as our test MongoServer doesn't support text search:
     // https://github.com/bwaldvogel/mongo-java-server
-    Query<Activity> activityQuery = changeEventService.createTextSearchQuery(Instant.ofEpochSecond(100),
-        Instant.ofEpochSecond(400), "searchText", Arrays.asList(ChangeCategory.DEPLOYMENT, ChangeCategory.ALERTS),
+    Query<Activity> activityQuery = changeEventService.createTextSearchQuery(Instant.parse("2023-01-31T00:00:00.00Z"),
+        Instant.parse("2023-01-31T10:00:00.00Z"), "searchText",
+        Arrays.asList(ChangeCategory.DEPLOYMENT, ChangeCategory.ALERTS),
         Arrays.asList(ChangeSourceType.HARNESS_CD, ChangeSourceType.KUBERNETES));
 
     assertThat(activityQuery.toString())
         .isEqualTo(
-            "{ {\"$and\": [{\"$text\": {\"$search\": \"searchText\"}}, {\"eventTime\": {\"$lt\": {\"$date\": 400000}}}, {\"eventTime\": {\"$gte\": {\"$date\": 100000}}}, {\"type\": {\"$in\": [\"DEPLOYMENT\"]}}]}  }");
+            "{ {\"$and\": [{\"$text\": {\"$search\": \"searchText\"}}, {\"eventTime\": {\"$lt\": {\"$date\": \"2023-01-31T10:00:00Z\"}}}, {\"eventTime\": {\"$gte\": {\"$date\": \"2023-01-31T00:00:00Z\"}}}]}  }");
 
     activityQuery = changeEventService.createTextSearchQuery(
-        Instant.ofEpochSecond(100), Instant.ofEpochSecond(400), "searchText", null, null);
+        Instant.parse("2023-01-31T00:00:00.00Z"), Instant.parse("2023-01-31T10:00:00.00Z"), "searchText", null, null);
     assertThat(activityQuery.toString())
         .isEqualTo(
-            "{ {\"$and\": [{\"$text\": {\"$search\": \"searchText\"}}, {\"eventTime\": {\"$lt\": {\"$date\": 400000}}}, {\"eventTime\": {\"$gte\": {\"$date\": 100000}}}, {\"type\": {\"$in\": [\"DEPLOYMENT\", \"PAGER_DUTY\", \"KUBERNETES\", \"HARNESS_CD_CURRENT_GEN\", \"FEATURE_FLAG\", \"CUSTOM_DEPLOY\", \"CUSTOM_INCIDENT\", \"CUSTOM_INFRA\", \"CUSTOM_FF\"]}}]}  }");
+            "{ {\"$and\": [{\"$text\": {\"$search\": \"searchText\"}}, {\"eventTime\": {\"$lt\": {\"$date\": \"2023-01-31T10:00:00Z\"}}}, {\"eventTime\": {\"$gte\": {\"$date\": \"2023-01-31T00:00:00Z\"}}}]}  }");
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetChangeSummary() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+        builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(200)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(350)).build(),
+        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(400)).build(),
+        builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(400)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
-
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO =
         changeEventService.getChangeSummary(builderFactory.getContext().getProjectParams(), (List<String>) null, null,
-            null, null, Instant.ofEpochSecond(100), Instant.ofEpochSecond(500));
+            null, null, Instant.ofEpochSecond(300), Instant.ofEpochSecond(500));
+
+    // to verify that the keys remain in the same order
+    assertThat(changeSummaryDTO.getCategoryCountMap().keySet())
+        .isEqualTo(new LinkedHashSet<>(List.of(ChangeCategory.values())));
 
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCount()).isEqualTo(3);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCountInPrecedingWindow())
         .isEqualTo(1);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getPercentageChange())
         .isCloseTo(200.0, offset(0.1));
+
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.ALERTS).getCount()).isEqualTo(0);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.ALERTS).getCountInPrecedingWindow())
         .isEqualTo(0);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.ALERTS).getPercentageChange())
         .isCloseTo(0.0, offset(0.1));
+
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.INFRASTRUCTURE).getCount()).isEqualTo(1);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.INFRASTRUCTURE).getCountInPrecedingWindow())
         .isEqualTo(1);
@@ -363,42 +439,78 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.FEATURE_FLAG).getPercentageChange())
         .isCloseTo(100.0, offset(0.1));
 
-    assertThat(changeSummaryDTO.getTotal().getCount()).isEqualTo(6);
-    assertThat(changeSummaryDTO.getTotal().getCountInPrecedingWindow()).isEqualTo(3);
-    assertThat(changeSummaryDTO.getTotal().getPercentageChange()).isCloseTo(100.0, offset(0.1));
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCount()).isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCountInPrecedingWindow())
+        .isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getPercentageChange())
+        .isCloseTo(0.0, offset(0.1));
+
+    assertThat(changeSummaryDTO.getTotal().getCount()).isEqualTo(7);
+    assertThat(changeSummaryDTO.getTotal().getCountInPrecedingWindow()).isEqualTo(4);
+    assertThat(changeSummaryDTO.getTotal().getPercentageChange()).isCloseTo(75.0, offset(0.1));
+  }
+
+  @Test
+  @Owner(developers = KARAN_SARASWAT)
+  @Category(UnitTests.class)
+  public void testGetChangeSummary_withCEFeatureFlagOff() {
+    hPersistence.save(
+        Arrays.asList(builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(300)).build()));
+
+    when(featureFlagService.isFeatureFlagEnabled(
+             eq(builderFactory.getContext().getAccountId()), eq(FeatureFlagNames.SRM_INTERNAL_CHANGE_SOURCE_CE)))
+        .thenReturn(false);
+    ChangeSummaryDTO changeSummaryDTO =
+        changeEventService.getChangeSummary(builderFactory.getContext().getProjectParams(), (List<String>) null, null,
+            null, null, Instant.ofEpochSecond(100), Instant.ofEpochSecond(500));
+
+    assertThat(changeSummaryDTO.getTotal().getCount()).isEqualTo(0);
+    assertThat(changeSummaryDTO.getTotal().getCountInPrecedingWindow()).isEqualTo(0);
+    assertThat(changeSummaryDTO.getTotal().getPercentageChange()).isCloseTo(0.0, offset(0.1));
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetChangeSummary_withServiceFiltering() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getInternalChangeActivity_FFBuilder()
             .monitoredServiceIdentifier("service_env2")
             .eventTime(Instant.ofEpochSecond(50))
             .build(),
+        builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+        builderFactory.getInternalChangeActivity_CEBuilder()
+            .monitoredServiceIdentifier("service_env2")
+            .eventTime(Instant.ofEpochSecond(50))
+            .build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
+        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getDeploymentActivityBuilder()
             .monitoredServiceIdentifier("service_env2")
             .eventTime(Instant.ofEpochSecond(200))
             .build(),
-        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(250)).build(),
+        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getInternalChangeActivity_FFBuilder()
+            .monitoredServiceIdentifier("service_env2")
+            .eventTime(Instant.ofEpochSecond(250))
+            .build(),
+        builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+        builderFactory.getInternalChangeActivity_CEBuilder()
             .monitoredServiceIdentifier("service_env2")
             .eventTime(Instant.ofEpochSecond(250))
             .build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
-
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO =
         changeEventService.getChangeSummary(builderFactory.getContext().getProjectParams(),
             Arrays.asList(builderFactory.getContext().getServiceIdentifier()), null, null, null,
-            Instant.ofEpochSecond(100), Instant.ofEpochSecond(500));
+            Instant.ofEpochSecond(300), Instant.ofEpochSecond(500));
 
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCount()).isEqualTo(2);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCountInPrecedingWindow())
@@ -423,33 +535,39 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.FEATURE_FLAG).getPercentageChange())
         .isCloseTo(0.0, offset(0.1));
 
-    assertThat(changeSummaryDTO.getTotal().getCount()).isEqualTo(4);
-    assertThat(changeSummaryDTO.getTotal().getCountInPrecedingWindow()).isEqualTo(3);
-    assertThat(changeSummaryDTO.getTotal().getPercentageChange()).isCloseTo(33.33, offset(0.1));
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCount()).isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCountInPrecedingWindow())
+        .isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getPercentageChange())
+        .isCloseTo(0.0, offset(0.1));
+
+    assertThat(changeSummaryDTO.getTotal().getCount()).isEqualTo(5);
+    assertThat(changeSummaryDTO.getTotal().getCountInPrecedingWindow()).isEqualTo(4);
+    assertThat(changeSummaryDTO.getTotal().getPercentageChange()).isCloseTo(25.00, offset(0.1));
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetChangeSummary_withTypeFiltering() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
+        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(350)).build(),
         builderFactory.getDeploymentActivityBuilder()
             .monitoredServiceIdentifier("service2_env2")
-            .eventTime(Instant.ofEpochSecond(200))
+            .eventTime(Instant.ofEpochSecond(350))
             .build(),
-        builderFactory.getPagerDutyActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+        builderFactory.getPagerDutyActivityBuilder().eventTime(Instant.ofEpochSecond(350)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
-            .eventTime(Instant.ofEpochSecond(300))
-            .build()));
-
+            .eventTime(Instant.ofEpochSecond(350))
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO =
         changeEventService.getChangeSummary(builderFactory.getContext().getProjectParams(),
             Arrays.asList(builderFactory.getContext().getServiceIdentifier()), null,
             Arrays.asList(ChangeCategory.DEPLOYMENT, ChangeCategory.ALERTS),
-            Arrays.asList(ChangeSourceType.HARNESS_CD, ChangeSourceType.KUBERNETES), Instant.ofEpochSecond(100),
+            Arrays.asList(ChangeSourceType.HARNESS_CD, ChangeSourceType.KUBERNETES), Instant.ofEpochSecond(300),
             Instant.ofEpochSecond(500));
 
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCount()).isEqualTo(1);
@@ -467,35 +585,38 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ARPITJ)
   @Category(UnitTests.class)
   public void testGetChangeSummary_withTypeFilteringInternalChangeSource() {
-    hPersistence.save(Arrays.asList(
-        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getInternalChangeActivity_FFBuilder()
-            .monitoredServiceIdentifier("service_env2")
-            .eventTime(Instant.ofEpochSecond(50))
-            .build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
-        builderFactory.getDeploymentActivityBuilder()
-            .monitoredServiceIdentifier("service2_env2")
-            .eventTime(Instant.ofEpochSecond(200))
-            .build(),
-        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(250)).build(),
-        builderFactory.getInternalChangeActivity_FFBuilder()
-            .monitoredServiceIdentifier("service_env2")
-            .eventTime(Instant.ofEpochSecond(250))
-            .build(),
-        builderFactory.getPagerDutyActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
-            .eventTime(Instant.ofEpochSecond(300))
-            .build()));
-
+    List<Activity> activities =
+        Arrays.asList(builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getInternalChangeActivity_FFBuilder()
+                .monitoredServiceIdentifier("service_env2")
+                .eventTime(Instant.ofEpochSecond(50))
+                .build(),
+            builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getInternalChangeActivity_CEBuilder()
+                .monitoredServiceIdentifier("service_env2")
+                .eventTime(Instant.ofEpochSecond(50))
+                .build(),
+            builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(350)).build(),
+            builderFactory.getInternalChangeActivity_FFBuilder()
+                .monitoredServiceIdentifier("service_env2")
+                .eventTime(Instant.ofEpochSecond(350))
+                .build(),
+            builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(350)).build(),
+            builderFactory.getInternalChangeActivity_CEBuilder()
+                .monitoredServiceIdentifier("service_env2")
+                .eventTime(Instant.ofEpochSecond(350))
+                .build(),
+            builderFactory.getPagerDutyActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+            builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
+                .eventTime(Instant.ofEpochSecond(300))
+                .build());
+    activities.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO =
         changeEventService.getChangeSummary(builderFactory.getContext().getProjectParams(),
             Arrays.asList(builderFactory.getContext().getServiceIdentifier()), null,
-            Arrays.asList(ChangeCategory.DEPLOYMENT, ChangeCategory.FEATURE_FLAG),
-            Arrays.asList(ChangeSourceType.HARNESS_FF, ChangeSourceType.KUBERNETES), Instant.ofEpochSecond(100),
-            Instant.ofEpochSecond(500));
+            Arrays.asList(ChangeCategory.DEPLOYMENT, ChangeCategory.FEATURE_FLAG, ChangeCategory.CHAOS_EXPERIMENT),
+            Arrays.asList(ChangeSourceType.HARNESS_FF, ChangeSourceType.KUBERNETES, ChangeSourceType.HARNESS_CE),
+            Instant.ofEpochSecond(300), Instant.ofEpochSecond(500));
 
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCount()).isEqualTo(0);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCountInPrecedingWindow())
@@ -509,38 +630,51 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.FEATURE_FLAG).getCount()).isEqualTo(1);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.FEATURE_FLAG).getCountInPrecedingWindow())
         .isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCount()).isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCountInPrecedingWindow())
+        .isEqualTo(1);
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetChangeSummary_withEnvironmentFiltering() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getInternalChangeActivity_FFBuilder()
             .monitoredServiceIdentifier("service_env2")
             .eventTime(Instant.ofEpochSecond(50))
             .build(),
+        builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+        builderFactory.getInternalChangeActivity_CEBuilder()
+            .monitoredServiceIdentifier("service_env2")
+            .eventTime(Instant.ofEpochSecond(50))
+            .build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
         builderFactory.getDeploymentActivityBuilder()
             .monitoredServiceIdentifier("service_env2")
             .eventTime(Instant.ofEpochSecond(200))
             .build(),
-        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(250)).build(),
+        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getInternalChangeActivity_FFBuilder()
             .monitoredServiceIdentifier("service_env2")
             .eventTime(Instant.ofEpochSecond(250))
             .build(),
+        builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+        builderFactory.getInternalChangeActivity_CEBuilder()
+            .monitoredServiceIdentifier("service_env2")
+            .eventTime(Instant.ofEpochSecond(250))
+            .build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(350)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
-
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO =
         changeEventService.getChangeSummary(builderFactory.getContext().getProjectParams(), (List<String>) null,
-            Arrays.asList(builderFactory.getContext().getEnvIdentifier()), null, null, Instant.ofEpochSecond(100),
+            Arrays.asList(builderFactory.getContext().getEnvIdentifier()), null, null, Instant.ofEpochSecond(300),
             Instant.ofEpochSecond(500));
 
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.DEPLOYMENT).getCount()).isEqualTo(2);
@@ -558,56 +692,72 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
         .isEqualTo(1);
     assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.FEATURE_FLAG).getPercentageChange())
         .isEqualTo(0);
+
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCount()).isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getCountInPrecedingWindow())
+        .isEqualTo(1);
+    assertThat(changeSummaryDTO.getCategoryCountMap().get(ChangeCategory.CHAOS_EXPERIMENT).getPercentageChange())
+        .isEqualTo(0);
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetTimeline() {
-    hPersistence.save(Arrays.asList(
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(200)).build(),
-        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(250)).build(),
-        builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
-            .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+    List<Activity> activityList =
+        Arrays.asList(builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(200)).build(),
+            builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(250)).build(),
+            builderFactory.getInternalChangeActivity_FFBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+            builderFactory.getInternalChangeActivity_CEBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+            builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+            builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
+                .eventTime(Instant.ofEpochSecond(300))
+                .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeTimeline changeTimeline = changeEventService.getTimeline(builderFactory.getContext().getProjectParams(), null,
         null, null, false, null, null, null, Instant.ofEpochSecond(100), Instant.ofEpochSecond(500), 2);
+
+    // to verify that the keys remain in the same order
+    assertThat(changeTimeline.getCategoryTimeline().keySet())
+        .isEqualTo(new LinkedHashSet<>(List.of(ChangeCategory.values())));
 
     List<TimeRangeDetail> deploymentChanges = changeTimeline.getCategoryTimeline().get(ChangeCategory.DEPLOYMENT);
     assertThat(deploymentChanges.size()).isEqualTo(2);
     assertThat(deploymentChanges.get(0).getCount()).isEqualTo(2);
-    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(100000);
+    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(0);
     assertThat(deploymentChanges.get(0).getEndTime()).isEqualTo(300000);
     assertThat(deploymentChanges.get(1).getCount()).isEqualTo(1);
     assertThat(deploymentChanges.get(1).getStartTime()).isEqualTo(300000);
-    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(500000);
+    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(600000);
     List<TimeRangeDetail> infrastructureChanges =
         changeTimeline.getCategoryTimeline().get(ChangeCategory.INFRASTRUCTURE);
     assertThat(infrastructureChanges.size()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getCount()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getStartTime()).isEqualTo(300000);
-    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(500000);
+    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(600000);
     List<TimeRangeDetail> featureFlagChanges = changeTimeline.getCategoryTimeline().get(ChangeCategory.FEATURE_FLAG);
     assertThat(featureFlagChanges.size()).isEqualTo(2);
-    assertThat(featureFlagChanges.get(0).getCount()).isEqualTo(1);
-    assertThat(featureFlagChanges.get(0).getStartTime()).isEqualTo(100000);
+    assertThat(featureFlagChanges.get(0).getCount()).isEqualTo(2);
+    assertThat(featureFlagChanges.get(0).getStartTime()).isEqualTo(0);
     assertThat(featureFlagChanges.get(0).getEndTime()).isEqualTo(300000);
     assertThat(featureFlagChanges.get(1).getCount()).isEqualTo(1);
     assertThat(featureFlagChanges.get(1).getStartTime()).isEqualTo(300000);
-    assertThat(featureFlagChanges.get(1).getEndTime()).isEqualTo(500000);
+    assertThat(featureFlagChanges.get(1).getEndTime()).isEqualTo(600000);
+    List<TimeRangeDetail> chaosExperimentChanges =
+        changeTimeline.getCategoryTimeline().get(ChangeCategory.CHAOS_EXPERIMENT);
+    assertThat(chaosExperimentChanges.size()).isEqualTo(1);
+    assertThat(chaosExperimentChanges.get(0).getCount()).isEqualTo(1);
+    assertThat(chaosExperimentChanges.get(0).getStartTime()).isEqualTo(300000);
+    assertThat(chaosExperimentChanges.get(0).getEndTime()).isEqualTo(600000);
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetMonitoredServiceChangeTimeline() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
@@ -618,7 +768,8 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(14398)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(14399500))
-            .build()));
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeTimeline changeTimeline =
         changeEventService.getMonitoredServiceChangeTimeline(builderFactory.getContext().getMonitoredServiceParams(),
             null, null, DurationDTO.FOUR_HOURS, Instant.ofEpochSecond(14398));
@@ -643,16 +794,16 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetTimeline_withTypeFilters() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(200)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getPagerDutyActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeTimeline changeTimeline = changeEventService.getTimeline(builderFactory.getContext().getProjectParams(), null,
         null, null, false, null, Arrays.asList(ChangeCategory.DEPLOYMENT, ChangeCategory.ALERTS),
         Arrays.asList(ChangeSourceType.HARNESS_CD, ChangeSourceType.KUBERNETES), Instant.ofEpochSecond(100),
@@ -661,11 +812,11 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
     List<TimeRangeDetail> deploymentChanges = changeTimeline.getCategoryTimeline().get(ChangeCategory.DEPLOYMENT);
     assertThat(deploymentChanges.size()).isEqualTo(2);
     assertThat(deploymentChanges.get(0).getCount()).isEqualTo(2);
-    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(100000);
+    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(0);
     assertThat(deploymentChanges.get(0).getEndTime()).isEqualTo(300000);
     assertThat(deploymentChanges.get(1).getCount()).isEqualTo(1);
     assertThat(deploymentChanges.get(1).getStartTime()).isEqualTo(300000);
-    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(500000);
+    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(600000);
     List<TimeRangeDetail> infrastructureChanges =
         changeTimeline.getCategoryTimeline().get(ChangeCategory.INFRASTRUCTURE);
     assertThat(infrastructureChanges).isEmpty();
@@ -677,22 +828,21 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetTimelineObject_forAggregationValidation() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(200)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(350)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(600))
-            .build()));
-
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     Iterator<TimelineObject> changeTimelineObject =
         changeEventService.getTimelineObject(builderFactory.getContext().getProjectParams(), null, null, null, null,
-            null, Instant.ofEpochSecond(100), Instant.ofEpochSecond(500), 2, false);
+            null, Instant.ofEpochSecond(0), Instant.ofEpochSecond(600), 2, false);
     List<TimelineObject> timelineObjectList = new ArrayList<>();
-    changeTimelineObject.forEachRemaining(timelineObject -> timelineObjectList.add(timelineObject));
+
+    changeTimelineObject.forEachRemaining(timelineObjectList::add);
 
     assertThat(timelineObjectList.size()).isEqualTo(3);
     assertThat(timelineObjectList.stream()
@@ -722,118 +872,123 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetTimeline_withServiceFiltering() {
-    hPersistence.save(Arrays.asList(
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
-        builderFactory.getDeploymentActivityBuilder()
-            .monitoredServiceIdentifier("monitoredservice2")
-            .eventTime(Instant.ofEpochSecond(200))
-            .build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
-            .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+    List<Activity> activityList =
+        Arrays.asList(builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
+            builderFactory.getDeploymentActivityBuilder()
+                .monitoredServiceIdentifier("monitoredservice2")
+                .eventTime(Instant.ofEpochSecond(200))
+                .build(),
+            builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+            builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
+                .eventTime(Instant.ofEpochSecond(300))
+                .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeTimeline changeTimeline = changeEventService.getTimeline(builderFactory.getContext().getProjectParams(),
         Arrays.asList(builderFactory.getContext().getServiceIdentifier()), null, null, false, null, null, null,
         Instant.ofEpochSecond(100), Instant.ofEpochSecond(500), 2);
 
     List<TimeRangeDetail> deploymentChanges = changeTimeline.getCategoryTimeline().get(ChangeCategory.DEPLOYMENT);
     assertThat(deploymentChanges.size()).isEqualTo(2);
-    assertThat(deploymentChanges.get(0).getCount()).isEqualTo(1);
-    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(100000);
+    assertThat(deploymentChanges.get(0).getCount()).isEqualTo(2);
+    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(0);
     assertThat(deploymentChanges.get(0).getEndTime()).isEqualTo(300000);
     assertThat(deploymentChanges.get(1).getCount()).isEqualTo(1);
     assertThat(deploymentChanges.get(1).getStartTime()).isEqualTo(300000);
-    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(500000);
+    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(600000);
     List<TimeRangeDetail> infrastructureChanges =
         changeTimeline.getCategoryTimeline().get(ChangeCategory.INFRASTRUCTURE);
     assertThat(infrastructureChanges.size()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getCount()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getStartTime()).isEqualTo(300000);
-    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(500000);
+    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(600000);
   }
 
   @Test
   @Owner(developers = KAMAL)
   @Category(UnitTests.class)
   public void testGetTimeline_withMonitoredServiceFiltering() {
-    hPersistence.save(Arrays.asList(
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
-        builderFactory.getDeploymentActivityBuilder()
-            .monitoredServiceIdentifier("monitoredservice2")
-            .eventTime(Instant.ofEpochSecond(200))
-            .build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
-            .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+    List<Activity> activityList =
+        Arrays.asList(builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
+            builderFactory.getDeploymentActivityBuilder()
+                .monitoredServiceIdentifier("monitoredservice2")
+                .eventTime(Instant.ofEpochSecond(200))
+                .build(),
+            builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+            builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
+                .eventTime(Instant.ofEpochSecond(300))
+                .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeTimeline changeTimeline = changeEventService.getTimeline(builderFactory.getContext().getProjectParams(), null,
         null, Arrays.asList(builderFactory.getContext().getMonitoredServiceParams().getMonitoredServiceIdentifier()),
         false, null, null, null, Instant.ofEpochSecond(100), Instant.ofEpochSecond(500), 2);
 
     List<TimeRangeDetail> deploymentChanges = changeTimeline.getCategoryTimeline().get(ChangeCategory.DEPLOYMENT);
     assertThat(deploymentChanges.size()).isEqualTo(2);
-    assertThat(deploymentChanges.get(0).getCount()).isEqualTo(1);
-    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(100000);
+    assertThat(deploymentChanges.get(0).getCount()).isEqualTo(2);
+    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(0);
     assertThat(deploymentChanges.get(0).getEndTime()).isEqualTo(300000);
     assertThat(deploymentChanges.get(1).getCount()).isEqualTo(1);
     assertThat(deploymentChanges.get(1).getStartTime()).isEqualTo(300000);
-    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(500000);
+    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(600000);
     List<TimeRangeDetail> infrastructureChanges =
         changeTimeline.getCategoryTimeline().get(ChangeCategory.INFRASTRUCTURE);
     assertThat(infrastructureChanges.size()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getCount()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getStartTime()).isEqualTo(300000);
-    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(500000);
+    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(600000);
   }
 
   @Test
   @Owner(developers = VARSHA_LALWANI)
   @Category(UnitTests.class)
   public void testGetTimeline_withScopedMonitoredServiceFiltering() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
         builderFactory.getDeploymentActivityBuilder()
-            .monitoredServiceIdentifier("monitoredservice2")
-            .eventTime(Instant.ofEpochSecond(200))
+            .monitoredServiceIdentifier("monitoredServiceV2")
+            .eventTime(Instant.ofEpochSecond(300))
             .build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeTimeline changeTimeline =
         changeEventService.getTimeline(builderFactory.getContext().getProjectParams(), null, null,
-            Arrays.asList(ScopedInformation.getScopedInformation(builderFactory.getContext().getAccountId(),
-                builderFactory.getContext().getOrgIdentifier(), builderFactory.getContext().getProjectIdentifier(),
-                builderFactory.getContext().getMonitoredServiceParams().getMonitoredServiceIdentifier())),
-            true, null, null, null, Instant.ofEpochSecond(100), Instant.ofEpochSecond(500), 2);
+            Arrays.asList(
+                ScopedInformation.getScopedInformation(builderFactory.getContext().getAccountId(),
+                    builderFactory.getContext().getOrgIdentifier(), builderFactory.getContext().getProjectIdentifier(),
+                    builderFactory.getContext().getMonitoredServiceParams().getMonitoredServiceIdentifier()),
+                ScopedInformation.getScopedInformation(builderFactory.getContext().getAccountId(),
+                    builderFactory.getContext().getOrgIdentifier(), builderFactory.getContext().getProjectIdentifier(),
+                    "monitoredServiceV2")),
+            true, null, null, null, Instant.ofEpochSecond(0), Instant.ofEpochSecond(600), 2);
 
     List<TimeRangeDetail> deploymentChanges = changeTimeline.getCategoryTimeline().get(ChangeCategory.DEPLOYMENT);
     assertThat(deploymentChanges.size()).isEqualTo(2);
     assertThat(deploymentChanges.get(0).getCount()).isEqualTo(1);
-    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(100000);
+    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(0);
     assertThat(deploymentChanges.get(0).getEndTime()).isEqualTo(300000);
     assertThat(deploymentChanges.get(1).getCount()).isEqualTo(1);
     assertThat(deploymentChanges.get(1).getStartTime()).isEqualTo(300000);
-    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(500000);
+    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(600000);
     List<TimeRangeDetail> infrastructureChanges =
         changeTimeline.getCategoryTimeline().get(ChangeCategory.INFRASTRUCTURE);
-    assertThat(infrastructureChanges.size()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getCount()).isEqualTo(1);
-    assertThat(infrastructureChanges.get(0).getStartTime()).isEqualTo(300000);
-    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(500000);
+    assertThat(infrastructureChanges.get(0).getStartTime()).isEqualTo(0);
+    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(300000);
+    assertThat(infrastructureChanges.get(1).getCount()).isEqualTo(1);
+    assertThat(infrastructureChanges.get(1).getStartTime()).isEqualTo(300000);
+    assertThat(infrastructureChanges.get(1).getEndTime()).isEqualTo(600000);
   }
 
   @Test
   @Owner(developers = KAMAL)
   @Category(UnitTests.class)
   public void testGetTimeline_withMonitoredServiceAndServiceFiltering() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
@@ -844,7 +999,8 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     assertThatThrownBy(
         ()
             -> changeEventService.getTimeline(builderFactory.getContext().getProjectParams(),
@@ -859,18 +1015,17 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetTimeline_withEnvironmentFiltering() {
-    hPersistence.save(Arrays.asList(
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
-        builderFactory.getDeploymentActivityBuilder()
-            .monitoredServiceIdentifier("service2_env2")
-            .eventTime(Instant.ofEpochSecond(200))
-            .build(),
-        builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
-        builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
-            .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+    List<Activity> activityList =
+        Arrays.asList(builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
+            builderFactory.getDeploymentActivityBuilder()
+                .monitoredServiceIdentifier("service2_env2")
+                .eventTime(Instant.ofEpochSecond(200))
+                .build(),
+            builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(300)).build(),
+            builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
+                .eventTime(Instant.ofEpochSecond(300))
+                .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeTimeline changeTimeline = changeEventService.getTimeline(builderFactory.getContext().getProjectParams(), null,
         Arrays.asList(builderFactory.getContext().getEnvIdentifier()), null, false, null, null, null,
         Instant.ofEpochSecond(100), Instant.ofEpochSecond(500), 2);
@@ -878,25 +1033,25 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
     List<TimeRangeDetail> deploymentChanges = changeTimeline.getCategoryTimeline().get(ChangeCategory.DEPLOYMENT);
     assertThat(deploymentChanges.size()).isEqualTo(2);
     assertThat(deploymentChanges.get(0).getCount()).isEqualTo(1);
-    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(100000);
+    assertThat(deploymentChanges.get(0).getStartTime()).isEqualTo(0);
     assertThat(deploymentChanges.get(0).getEndTime()).isEqualTo(300000);
     assertThat(deploymentChanges.get(1).getCount()).isEqualTo(1);
     assertThat(deploymentChanges.get(1).getStartTime()).isEqualTo(300000);
-    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(500000);
+    assertThat(deploymentChanges.get(1).getEndTime()).isEqualTo(600000);
 
     List<TimeRangeDetail> infrastructureChanges =
         changeTimeline.getCategoryTimeline().get(ChangeCategory.INFRASTRUCTURE);
     assertThat(infrastructureChanges.size()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getCount()).isEqualTo(1);
     assertThat(infrastructureChanges.get(0).getStartTime()).isEqualTo(300000);
-    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(500000);
+    assertThat(infrastructureChanges.get(0).getEndTime()).isEqualTo(600000);
   }
 
   @Test
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetPaginated_withEnvironmentFiltering() {
-    hPersistence.save(Arrays.asList(
+    List<Activity> activityList = Arrays.asList(
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder().eventTime(Instant.ofEpochSecond(50)).build(),
         builderFactory.getDeploymentActivityBuilder().eventTime(Instant.ofEpochSecond(100)).build(),
@@ -906,7 +1061,8 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
             .build(),
         builderFactory.getKubernetesClusterActivityForAppServiceBuilder()
             .eventTime(Instant.ofEpochSecond(300))
-            .build()));
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     PageResponse<ChangeEventDTO> firstPage =
         changeEventService.getChangeEvents(builderFactory.getContext().getProjectParams(), null,
             Arrays.asList(builderFactory.getContext().getEnvIdentifier()), null, null, null, Instant.ofEpochSecond(100),
@@ -926,10 +1082,11 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = ABHIJITH)
   @Category(UnitTests.class)
   public void testGetChangeSummary_WithServiceParams() {
-    hPersistence.save(builderFactory.getDeploymentActivityBuilder().build());
-    hPersistence.save(builderFactory.getDeploymentActivityBuilder()
-                          .eventTime(builderFactory.getClock().instant().minus(Duration.ofMinutes(15)))
-                          .build());
+    List<Activity> activityList = Arrays.asList(builderFactory.getDeploymentActivityBuilder().build(),
+        builderFactory.getDeploymentActivityBuilder()
+            .eventTime(builderFactory.getClock().instant().minus(Duration.ofMinutes(15)))
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO =
         changeEventService.getChangeSummary(builderFactory.getContext().getMonitoredServiceParams(),
             changeSourceIdentifiers, builderFactory.getClock().instant().minus(Duration.ofMinutes(10)),
@@ -945,10 +1102,11 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = VARSHA_LALWANI)
   @Category(UnitTests.class)
   public void testGetChangeSummary_WithMonitoredService() {
-    hPersistence.save(builderFactory.getDeploymentActivityBuilder().build());
-    hPersistence.save(builderFactory.getDeploymentActivityBuilder()
-                          .eventTime(builderFactory.getClock().instant().minus(Duration.ofMinutes(15)))
-                          .build());
+    List<Activity> activityList = Arrays.asList(builderFactory.getDeploymentActivityBuilder().build(),
+        builderFactory.getDeploymentActivityBuilder()
+            .eventTime(builderFactory.getClock().instant().minus(Duration.ofMinutes(15)))
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO = changeEventService.getChangeSummary(builderFactory.getProjectParams(), null,
         Collections.singletonList(
             builderFactory.getContext().getMonitoredServiceParams().getMonitoredServiceIdentifier()),
@@ -965,10 +1123,11 @@ public class ChangeEventServiceImplTest extends CvNextGenTestBase {
   @Owner(developers = VARSHA_LALWANI)
   @Category(UnitTests.class)
   public void testGetChangeSummary_WithScopedMonitoredService() {
-    hPersistence.save(builderFactory.getDeploymentActivityBuilder().build());
-    hPersistence.save(builderFactory.getDeploymentActivityBuilder()
-                          .eventTime(builderFactory.getClock().instant().minus(Duration.ofMinutes(15)))
-                          .build());
+    List<Activity> activityList = Arrays.asList(builderFactory.getDeploymentActivityBuilder().build(),
+        builderFactory.getDeploymentActivityBuilder()
+            .eventTime(builderFactory.getClock().instant().minus(Duration.ofMinutes(15)))
+            .build());
+    activityList.forEach(activity -> activityService.upsert(activity));
     ChangeSummaryDTO changeSummaryDTO = changeEventService.getChangeSummary(builderFactory.getProjectParams(), null,
         Collections.singletonList(ScopedInformation.getScopedInformation(builderFactory.getContext().getAccountId(),
             builderFactory.getContext().getOrgIdentifier(), builderFactory.getContext().getProjectIdentifier(),
